--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "react-intersection-observer": "^9.5.2",
     "react-simple-typewriter": "^5.0.1",
     "sass": "^1.68.0",
+    "sharp": "^0.32.6",
     "smooth-scroll": "^16.1.3",
     "smoothscroll-polyfill": "^0.4.4",
     "styled-components": "^6.0.9"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.11",
     "@types/locomotive-scroll": "^4.1.1",
     "@types/node": "latest",
     "@types/react": "latest",
